# chiron

./: .claudeignore  .gitignore  CLAUDE.md  CMakeLists.txt  MONITORING.md  README.md  __init__.py  conftest.py  daemon.py  gemini.md  index.html  kalshicryptopage.html  kalshiforllm.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: resolution_agent.py  risk_agent.py
benchmarks/: hot_path.py
core/: __init__.py  alert.py  config.py  environment.py  kalshi_client.py  models.py
cpp/: backtester.cpp  bindings.cpp  lob_preprocessing.cpp
cpp/include/: backtester.hpp
data/: kalshi_orderbooks.db  paper_trades.db  paper_trades_100k_backup_20260417.db
deploy/: Dockerfile  docker-compose.yml  gce_setup.sh
docs/: CALIBRATION.md  RISK_MODEL.md
misc/openclaw/: README_OPENCLAW.md
research/: count_markets.py  diag_markets.py  edge_analysis.py  health_check.py  inspect_keys.py  kalshi_data_capture.py  kalshi_sports_taxonomy_scan.py  live_roi.py  pnl_dashboard.py  replay_backtest.py
scripts/: check_cpp_backend.py  force_resolve.py  run_event_backtest.py  sync_demo_fills.py  wipe_local_dbs.py
src/vequil/: agent.py
strategies/crypto/: daemon.py
strategies/crypto/agents/: crypto_feed_agent.py  execution_agent.py  feature_agent.py  resolution_agent.py  risk_agent.py  scanner_agent.py  websocket_agent.py
strategies/crypto/core/: config.py  features.py  models.py  pricing.py
strategies/crypto/research/: __init__.py  datamodule.py
strategies/econ/: daemon.py
strategies/econ/agents/: econ_feed_agent.py  econ_scanner_agent.py
strategies/econ/core/: bls_client.py  calendar.py  config.py  fred_client.py  models.py
strategies/sports/: daemon.py
strategies/sports/agents/: sports_feed_agent.py  sports_scanner_agent.py
strategies/sports/core/: config.py  espn_client.py  models.py
strategies/weather/: daemon.py
strategies/weather/agents/: weather_feed_agent.py  weather_scanner_agent.py
strategies/weather/core/: config.py  models.py  nws_client.py  stations.py
tests/: test_crypto_feed_agent.py  test_crypto_matching.py  test_db.py  test_environment.py  test_features.py  test_kalshi_client_parsing.py  test_kelly.py  test_kelly_properties.py  test_l2_datamodule.py  test_pipeline.py  test_pricing.py  test_pricing_properties.py  test_resolution_agent.py  test_risk_agent.py  test_scanner_agent.py
tools/: __init__.py  cli.py  dashboard.py  paper.py  pipeline.py
