[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latency"
version = "1.0.0"
description = "Multi-agent latency arbitrage system for Kalshi crypto binary contracts."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["kalshi", "trading", "kelly-criterion", "arbitrage"]
dependencies = [
    "aiohttp>=3.9",
    "cryptography>=42.0",
    "python-dotenv>=1.0.0",
    "websockets>=14.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
latency = "latency.tools.cli:main"
latency-daemon = "daemon:main"

[tool.hatch.build.targets.wheel]
packages = ["latency"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
